added banner section

--- a/index.html
+++ b/index.html
@@ -94,6 +94,30 @@
               <a class="btn bg-ko text-white hover:text-black">Free Consultation</a>
             </div>
           </div>
+          <!-- banner section  -->
+     <section class="mx-auto max-w-screen-xl mt-20">
+        <div
+  class="hero h-[500px]"
+  style="background-image: url('./images/banner.png');">
+  <div class="hero-overlay bg-opacity-50"></div>
+  <div class="hero-content text-neutral-content text-center">
+    <div class="max-w-md text-center">
+      <h1 class="mb-5 text-5xl font-bold">We Provide Effective Legal Solutions</h1>
+      <p class="mb-5">
+        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+        quasi. In deleniti eaque aut repudiandae et a id nisi.
+      </p>
+      <div>
+        <input
+            type="text"
+            placeholder="Type here"
+            class="input input-bordered input-primary w-full max-w-xs border-none rounded-sm" />
+        <button class="btn bg-ko text-white hover:text-black rounded-sm border-none">Search</button>
+      </div>
+    </div>
+  </div>
+</div>
+     </section>
     </header>
     <main>
 
