--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <ul 
                   tabindex="0"
                   class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow ">
-                  <li><a>Home</a></li>
+                  <li><a> <i class="fa-solid fa-greater-than"></i></a></li>
                   <li><a>Services ></i></a></li>
                   <li><a>Cases ></a></li>
                   <li><a>Blog ></i></a></li>
@@ -83,11 +83,11 @@
             </div>
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
-                <li><a class="text-[#707070] text-xl">Home</a></li>
-                  <li><a class="text-[#707070] text-xl">Services</a></li>
-                  <li><a class="text-[#707070] text-xl">Cases</a></li>
-                  <li><a class="text-[#707070] text-xl">Blog</a></li>
-                  <li><a class="text-[#707070] text-xl">Contact Us</a></li>
+                <li><a class="text-[#707070] text-xl">Home <i class="fa-solid fa-greater-than"></i></a></li>
+                  <li><a class="text-[#707070] text-xl">Services<i class="fa-solid fa-greater-than"></i></a></li>
+                  <li><a class="text-[#707070] text-xl">Cases<i class="fa-solid fa-greater-than"></i></a></li>
+                  <li><a class="text-[#707070] text-xl">Blog<i class="fa-solid fa-greater-than"></i></a></li>
+                  <li><a class="text-[#707070] text-xl">Contact Us<i class="fa-solid fa-greater-than"></i></a></li>
               </ul>
             </div>
             <div class="navbar-end">
@@ -112,15 +112,119 @@
             type="text"
             placeholder="Type here"
             class="input input-bordered input-primary w-full max-w-xs border-none rounded-sm" />
-        <button class="btn bg-ko text-white hover:text-black rounded-sm border-none">Search</button>
+        <button class="btn bg-ko text-white hover:text-black rounded-sm border-none mt-2">Search</button>
       </div>
     </div>
   </div>
 </div>
      </section>
     </header>
-    <main>
+    <main  class="md:container mx-auto " >
 
+        <!-- legal area section  -->
+        <section class="mt-24 max-w-screen-xl  mx-auto">
+            <div class="text-center space-y-2">
+                <h1 class="text-4xl font-semibold">The Legal Practice Area</h1>
+                <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+            </div>
+
+            <div class="mt-14">
+                <div class="grid md:grid-cols-2 lg:grid-cols-3 w-9/12 mx-auto">
+
+                    <div class="card bg-base-100 w-[300px] shadow-xl border-2 rounded">
+                        <figure class="px-10 pt-10">
+                          <img
+                            src="./images/business.png"
+                            alt="Shoes"
+                            class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl font-bold">Business Law</h2>
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-ko rounded-full"><i class="fa-solid fa-greater-than"></i></button>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card bg-gradient-to-t from-[#F3F3F3] to-[#F3F3F3]  w-[300px] shadow-xl border-2  rounded">
+                        <figure class="px-10 pt-10">
+                          <img
+                            src="./images/tax.png"
+                            alt="Shoes"
+                            class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl font-bold">Tax Law</h2>
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-ko rounded-full"><i class="fa-solid fa-greater-than"></i></button>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card bg-base-100 w-[300px] shadow-xl border-2  rounded">
+                        <figure class="px-10 pt-10">
+                          <img
+                            src="./images/divorce.png"
+                            alt="Shoes"
+                            class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl font-bold">Divorce Law</h2>
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-ko rounded-full"><i class="fa-solid fa-greater-than"></i></button>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card bg-base-100 w-[300px] shadow-xl border-2  rounded">
+                        <figure class="px-10 pt-10">
+                          <img
+                            src="./images/education.png"
+                            alt="Shoes"
+                            class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl font-bold">Education Law</h2>
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-ko rounded-full"><i class="fa-solid fa-greater-than"></i></button>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card bg-base-100 w-[300px] shadow-xl border-2  rounded">
+                        <figure class="px-10 pt-10">
+                          <img
+                            src="./images/child.png"
+                            alt="Shoes"
+                            class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl font-bold">Child Support</h2>
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-ko rounded-full"><i class="fa-solid fa-greater-than"></i></button>
+                          </div>
+                        </div>
+                      </div>
+                    <div class="card bg-base-100 w-[300px] shadow-xl border-2  rounded">
+                        <figure class="px-10 pt-10">
+                          <img
+                            src="./images/criminal.png"
+                            alt="Shoes"
+                            class="rounded-xl" />
+                        </figure>
+                        <div class="card-body items-center text-center">
+                          <h2 class="card-title text-3xl font-bold">Criminal Law</h2>
+                          <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                          <div class="card-actions">
+                            <button class="btn bg-ko rounded-full"><i class="fa-solid fa-greater-than"></i></button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
